add full size images to personal page full post list

--- a/style.css
+++ b/style.css
@@ -108,6 +108,12 @@
 	background-color: #efefef;
 }
 
+.personal-full-item .meta {
+	margin-top: -20px;
+    margin-bottom: 20px;
+    font-size: .9em;
+}
+
 /* -------------------- BIG LAYOUT -------------------- */
 
 /* -------------------- SOUNDCLOUD LAYOUT -------------------- */
