change personal page to pull content w matching stu_id custom field

--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@
 	width: 15%;
 }
 
+.personal-big {
+	max-height: 700px;
+}
+
 }
 
 /* -------------------- MeDiUm LAYOUT -------------------- */
