--- a/style.css
+++ b/style.css
@@ -123,6 +123,31 @@
 	padding: 8px;
 }
 
+/* ----------------- TEAM/Masonry Page ----------------------- */
+.team-content {
+	width:80%;
+	margin:auto;
+	padding: 10px;
+}
+
+.masonry { /* Masonry container */
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+    -moz-column-gap: 1em;
+    -webkit-column-gap: 1em;
+    column-gap: 1em;
+}
+
+.item { /* Masonry bricks or child elements */
+    background-color: #eee;
+    display: inline-block;
+    margin: 0 0 1em;
+    width: 100%;
+    padding: 15px 10px 10px 10px;
+}
+
+
 /* -------------------- BIG LAYOUT -------------------- */
 
 /* -------------------- SOUNDCLOUD LAYOUT -------------------- */
@@ -199,6 +224,15 @@ header#masthead-progression #logo {
 	width: 22%;
 }
 
+.masonry { /* Masonry container */
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    -moz-column-gap: 1em;
+    -webkit-column-gap: 1em;
+    column-gap: 1em;
+}
+
 }
 
 /* -------------------- small LAYOUT -------------------- */
@@ -235,6 +269,15 @@ header#masthead-progression #logo {
 
 .personal {
 	width: 44%;
+}
+
+.masonry { /* Masonry container */
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+    -moz-column-gap: 1em;
+    -webkit-column-gap: 1em;
+    column-gap: 1em;
 }
 
 }
